--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,7 +35,7 @@ jobs:
 
     # Step 4: Run Maven build and tests
     - name: Build and run tests
-      run: mvn verify
+      run: mvn clean install
 
     # Step 5: Publish test results (if any reports exist)
     - name: Archive test reports
