--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,37 +10,53 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout the repository
-    - name: Checkout LatestCucumberParallelExecutionUsingTestNG repository
-      uses: actions/checkout@v3
+      # Step 1: Checkout the repository
+      - name: Checkout LatestCucumberParallelExecutionUsingTestNG repository
+        uses: actions/checkout@v3
 
-    # Step 2: Set up JDK 17
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'adopt'
+      # Step 2: Set up JDK 17
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: "17"
+          distribution: "adopt"
+          
+      # Step 2: Setup Chrome
+      - name: Install Google Chrome
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo dpkg -i google-chrome-stable_current_amd64.deb
+          sudo apt-get -f install
 
-    # Step 3: Cache Maven dependencies for faster builds
-    - name: Cache Maven packages
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-maven
+      # Step 2: Setup Chrome
+      - name: Install ChromeDriver
+        run: |
+          wget https://chromedriver.storage.googleapis.com/4.20.0/chromedriver_linux64.zip
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/chromedriver
+          sudo chmod +x /usr/local/bin/chromedriver
 
-    # Step 4: Run Maven build and tests
-    - name: Build and run tests
-      run: mvn clean install
+      # Step 3: Cache Maven dependencies for faster builds
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven
 
-    # Step 5: Publish test results (if any reports exist)
-    - name: Archive test reports
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-results
-        path: target/surefire-reports/
+      # Step 4: Run Maven build and tests
+      - name: Build and run tests
+        run: mvn clean install
+
+      # Step 5: Publish test results (if any reports exist)
+      - name: Archive test reports
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: target/surefire-reports/
