--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,4 +42,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: test-results
-          path: target/surefire-reports/
+          path: ./SparkReport/Index.html
