--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,6 +37,10 @@ jobs:
       - name: Build and run tests
         run: mvn clean install
 
+       # List files to verify if the report is generated
+      - name: List files in SparkReport
+        run: ls -la ./SparkReport
+
       # Step 5: Publish test results (if any reports exist)
       - name: Archive test reports
         if: always()
