--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,4 +47,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: test-results
-          path: ../SparkReport/Index.html
+          path: ./test-output/SparkReport/Index.html
