--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,18 +16,18 @@ jobs:
     steps:
       # Step 1: Checkout the repository
       - name: Checkout LatestCucumberParallelExecutionUsingTestNG repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # Step 2: Set up JDK 17
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: "17"
           distribution: "adopt"
 
       # Step 3: Cache Maven dependencies for faster builds
       - name: Cache Maven packages
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
@@ -48,3 +48,4 @@ jobs:
         with:
           name: test-results
           path: ./test-output/SparkReport/Index.html
+          if-no-files-found: error
