--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,6 +40,10 @@ jobs:
        # List files to verify if the report is generated
       - name: List files in SparkReport
         run: ls -la ./test-output/SparkReport/Index.html
+        
+        # List files to verify if the report is generated
+      - name: List files in SparkReport
+        run: ls -la "./test output/PdfReport/ExtentPdf.pdf"
 
       # Step 5: Publish test results (if any reports exist)
       - name: Archive test reports
@@ -49,3 +53,11 @@ jobs:
           name: test-results
           path: ./test-output/SparkReport/Index.html
           if-no-files-found: error
+
+      # Step 6: Upload the PDF report as a separate artifact
+      - name: Upload PDF Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: cucumber-pdf-report
+          path: "./test output/PdfReport/ExtentPdf.pdf"
+          if-no-files-found: error          
