--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -60,4 +60,11 @@ jobs:
         with:
           name: cucumber-pdf-report
           path: "./test output/PdfReport/ExtentPdf.pdf"
-          if-no-files-found: error          
+          if-no-files-found: error 
+          
+      # Step 7: Deploy report to GitHub Pages
+      - name: Deploy report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./test-output/SparkReport/Index.html
